packages/beff-core/tests/snapshots/report_error__tests__fail_path_param_optional.snap
---
source: packages/beff-core/tests/report_error.rs
expression: fail(from)
---
Error: ~~~
   ╭─[<unknown>:1:1]
   │
 5 │             get: (c:Ctx, a?: string): string => {
   │                          ─────┬────  
   │                               ╰────── Path parameter cannot be optional
───╯

